--- a/site/templates/style.css
+++ b/site/templates/style.css
@@ -85,15 +85,5 @@ h1 {
 body {
     background-image: linear-gradient(to right, white 50%, brown 50%);
     background-size: 200% 100%;
-    animation: moveBackground 2s linear forwards;
-}
-
-.background-container {
-    background-image: inherit;
-    width: 100%;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: -1;
+    animation: moveBackground 2s linear infinite;
 }
