--- a/weather/static/style.css
+++ b/weather/static/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    background-color: #f2f2f2;
+    background-image: url('image.webp') alt="zdjecie";
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
