zmiany css i html

--- a/site/templates/strona_html.html
+++ b/site/templates/strona_html.html
@@ -2,25 +2,60 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale:1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title> Moja Strona</title>
     
 </head>
 <body>
     <div class="menu">
         <ul>
-            <li><a href="#">Instagram</a></li>
-            <li><a href="#">Github</a></li>
-            <li><a href="#">Twitter</a></li>
+            <li><a href="https://www.instagram.com/owhslp/" class="fas fa-instagram instagram"></a></li>
+            <li><a href="https://github.com/Owhslp" class="fab fa-github github"></a></li>
+            <li><a href="https://twitter.com/quchfu" class="fab fa-twitter twitter"></a></li>
         </ul>
     </div>
     <div class="content">
         <h1>HI! here is my site.</h1>
         <a href="#" class="btn">My description</a>
     </div>
-    <div class="background-container"></div>
+    <div class="background-container">
+        <div class="circle"></div>
+        <div class="circle"></div>
+    </div>
 <script>
+    const circle1 = document.querySelector(".circle:nth-child(1)");
+    const circle2 = document.querySelector(".circle:nth-child(2)");
+
+    let angle1 = 0;
+    let angle2 = 180;
+
+    function updatePositions() {
+        const centerX = window.innerWidth / 2;
+        const centerY = window.innerHeight /2;
+        const radius = 100;
+
+        const x1 = centerX + radius * Math.cos(angle1 * (Math.PI / 180))
+        const y1 = centerY + radius * Math.sin(angle1 * (Math.PI / 180));
+
+
+        const x2 = centerX + radius * Math.cos(angle2 * (Math.PI / 180))
+        const y2 = centerY + radius * Math.sin(angle2 * (Math.PI / 180));
+
+        circle1.style.left = x1 + "px";
+        circle1.style.top = y1 + "px";
+
+        circle2.style.left = x2 + "px";
+        circle2.style.top = y2 + "px";
+
+        angle1 += 2;
+        angle2 += 2;
+
+        requestAnimationFrame(updatePositions);
+    }   
+
+    updatePositions();
     document.querySelector(".btn").addEventListener("click", function() {
         alert("to jest opis");
     
