--- a/site/templates/strona_html.html
+++ b/site/templates/strona_html.html
@@ -18,7 +18,7 @@
     </div>
     <div class="content">
         <h1>HI! here is my site.</h1>
-        <a href="#" class="btn">My description</a>
+        <a href="description.html" class="btn">My description</a>
     </div>
     <div class="background-container">
         <div class="circle"></div>
@@ -45,7 +45,7 @@
 
         circle1.style.left = x1 + "px";
         circle1.style.top = y1 + "px";
-
+a
         circle2.style.left = x2 + "px";
         circle2.style.top = y2 + "px";
 
