--- a/site/templates/description.html
+++ b/site/templates/description.html
@@ -3,15 +3,11 @@
     <head>
     <meta charset="UTF-8">
     <title>Description Page</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="des.css">
     </head>
 <body>
-    <div id="descriptionContainer">
-        <p id="descriptionText">tekst poczaktuwo </p>
-    </div>
+    <div id="descriptionContainer"></div>
     <button id='backbutton'> Back </button>
     <script src="script.js"></script>
 </body>
-    
 </html>
