--- a/site/templates/root/description.html
+++ b/site/templates/root/description.html
@@ -3,11 +3,11 @@
     <head>
     <meta charset="UTF-8">
     <title>Description Page</title>
-    <link rel="stylesheet" href="des.css">
+    <link rel="stylesheet" href="/site/templates/docs/assets/css/des.css">
     </head>
 <body>
     <div id="descriptionContainer"></div>
     <button id='backbutton'> Back </button>
-    <script src="script.js"></script>
+    <script src="/assets/js/script.js"></script>
 </body>
 </html>
