--- a/site/templates/root/index.html
+++ b/site/templates/root/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/site/templates/docs/assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title> Owhslp</title>
     
@@ -27,5 +27,7 @@
     <p>We are disturbed by our own unconsciousness; we want to unmask it, as if it were the perpetrator of our troubles.</p>
     <p> The only person with whom you have to compare yourself is you in the past. The goal is to be better than that person, not to be better than other people.</p>
     <p> ~ Zygmunt Freud </p>
+
 </body>
+
 </html>
